    - improve AA version detection, adapt to modified hash function
    - VS2019 16.4: fix "Error" shown in tooltip for array elements beyond the actual size

unreleased Version 0.52.0
  * editor:
    - restart semantic analysis if project settings change
    - while showing completions typing more characters no longer restarts analysis, but
      just filters existing results
  * VS 2019 16.1+: the new project dialog now allows filtering by language tag "D"
  * avoid crash due to unhandled exception if checking for updates fails
  * refresh Update page after upgrading
  * mago debugger:
    - lookup symbols as the remainder of globals and present them expandable if ambiguous
    - add option to show length of dynamic array in type column
    - add support for Tuples: recombine fields __<var>_field_%d to an expandable structure
    - fixed displaying dynamic type of C++ classes for x86
  * cv2pdb:
    - fixed debug info conversion error when dchar is used with dmd 2.089+
  * dmdserver:
    - rebased to dmd 2.091.0-beta1
    - all language options are now passed to the engine
    - fixed a couple of crashes (often result in eternally reporting "Anaylzing...")
    - terminate on fatal assertions and let Visual D restart the server
    - improvements for code-completions
    - bugzilla 20660: goto definition on import module doesn't work
  * dparser:
    - added parser support for is(symbol == module/package)
  * projects:
    - added support for -preview=dip1021 (though compiler crashes)
    - added support for -preview=rvaluerefparam
    - added support for -preview=nosharedaccess
    - added support for -HCf (C++ header generation, only vcxproj)
    - LDC with vcxproj: some language options were inaccessible
    - removed legacy support for -property
    - vcxproj: add dbuild.props showing how to setup a project that builds D files without Visual D installed
    - vcxproj: do not check referenced projects if the project itself already needs phobos to be linked