@@ -1,5 +1,5 @@
 #define VERSION_MAJOR      0
 #define VERSION_MINOR      52
 #define VERSION_REVISION   0
-#define VERSION_BETA       -beta
+#define VERSION_BETA       -rc
 #define VERSION_BUILD      1
