@@ -1211,6 +1211,7 @@ unreleased Version 0.52.0
     - restart semantic analysis if project settings change
     - while showing completions typing more characters no longer restarts analysis, but
       just filters existing results
+    - fix parameter info tooltip for functions with function attributes
   * VS 2019 16.1+: the new project dialog now allows filtering by language tag "D"
   * avoid crash due to unhandled exception if checking for updates fails
   * refresh Update page after upgrading
